Passing int values from python script

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -11,7 +11,7 @@
     <tr align="center">
 		<td width="50px"><img src="/images/sunlight.png" alt="Sunlight" style="width:50px;height:50px;"></td>
         <td width="60px"><a> Sunlight</a></td>
-		<td width="60px"><a><%= sunlight %>%</a></td>
+		<td width="60px"><a><%= sunlight %> Lux</a></td>
 	</tr>
 	<tr align="center">
         <td width="50px"><img src="/images/water.png" alt="Moisture" style="width:50px;height:50px;"></td>
@@ -21,12 +21,12 @@
 	<tr align="center">
         <td width="50px"><img src="/images/poo.png" alt="Fertility" style="width:50px;height:50px;"></td>
         <td width="60px"><a> Fertility</a></td>
-		<td width="60px"><a><%= fertility %>%</a></td>
+		<td width="60px"><a><%= fertility %>uS/cm</a></td>
 	</tr>
 	<tr align="center">
         <td width="50px"><img src="./images/temperature.png" alt="Temperature" style="width:50px;height:50px;"></td>
         <td width="60px"><a> Temperature</a></td>
-		<td width="60px"><a><%= temperature %>%</a></td>
+		<td width="60px"><a><%= temperature %>C</a></td>
 	</tr>
 	</table>
 	<input id="refresh" type="button" onclick="checkStatus()" value="Refresh">
