--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,11 +2,25 @@
 
 <!DOCTYPE html>
 <html>
+	<head>
+	<style>
+	table {
+		border-collapse: collapse;
+		width: 100%;
+	}
+	th, td {
+		padding: 8px;
+		text-align: center;
+		border-bottom: 1px solid #ddd;
+	}
+	tr:hover {background-color:#f5f5f5;}
+	</style>
+	</head>
 	<header>
 	</header>
 	<table height="230px" border= "1">
-    <tr>
-        <td colspan="3" style="font-size: 3em; font-weight: bold" valign="bottom">Sensor Status</td>
+    <tr align="center">
+        <td colspan="3" style="font-size: 3em; font-weight: bold" valign="bottom"> <%= name %> </td>
     </tr>
     <tr align="center">
 		<td width="50px"><img src="/images/sunlight.png" alt="Sunlight" style="width:50px;height:50px;"></td>
@@ -21,18 +35,18 @@
 	<tr align="center">
         <td width="50px"><img src="/images/poo.png" alt="Fertility" style="width:50px;height:50px;"></td>
         <td width="60px"><a> Fertility</a></td>
-		<td width="60px"><a><%= fertility %>uS/cm</a></td>
+		<td width="60px"><a><%= fertility %> uS/cm</a></td>
 	</tr>
 	<tr align="center">
         <td width="50px"><img src="./images/temperature.png" alt="Temperature" style="width:50px;height:50px;"></td>
         <td width="60px"><a> Temperature</a></td>
-		<td width="60px"><a><%= temperature %>C</a></td>
+		<td width="60px"><a><%= temperature %> C</a></td>
 	</tr>
 	</tr>
 	<tr align="center">
         <td width="50px"><img src="./images/battery.png" alt="Battery" style="width:50px;height:50px;"></td>
         <td width="60px"><a> Battery</a></td>
-		<td width="60px"><a><%= battery %>C</a></td>
+		<td width="60px"><a><%= battery %>%</a></td>
 	</tr>
 
 	<tr align="center">
