--- a/views/pages/indexPl.ejs
+++ b/views/pages/indexPl.ejs
@@ -5,59 +5,93 @@
 	<head>
 	<style>
 	table {
-		border-collapse: collapse;
-		width: 100%;
+		<!-- border-collapse: collapse; -->
+		width: 30%;
+		float: left;
+		margin: 10px;
+
 	}
 	th, td {
 		padding: 8px;
 		text-align: center;
 		border-bottom: 1px solid #ddd;
 	}
-	tr:hover {background-color:#f5f5f5;}
+	table.roundedCorners { 
+  		border: 1px solid Black;
+  		border-radius: 13px; 
+  		border-spacing: 0;
+  	}
+	table.roundedCorners td, 
+	table.roundedCorners th { 
+  	border-bottom: 1px solid Black;
+ 	padding: 10px; 
+  	}
+	table.roundedCorners tr:last-child > td {
+  		border-bottom: none;
+	}
+	tr.notfirst:hover {
+    		background-color:#f5f5f5;
+  		border: 1px solid Black;
+	}
+
+	.footer {
+   		position: fixed;
+   		left: 0;
+   		bottom: 0;
+   		width: 100%;
+		height: 10%;
+   		background-color: #f5f5f5;
+   		color: white;
+   		align: center;
+	}
 	</style>
 	</head>
 	<header>
 	</header>
+	<body>
 	<div>
 	<% for(var i=0; i < plants.length; i++) { %> 
-	<table border= "1" style="float: left">
-    <tr align="center">
+	<table class="roundedCorners">
+    	<tr align="center">
         <td colspan="3" style="font-size: 3em; font-weight: bold" valign="bottom"> <%= plants[i].name %> </td>
-    </tr>
-    <tr align="center">
+    	</tr>
+    	<tr class="notfirst" align="center">
 		<td width="50px"><img src="/images/sunlight.png" alt="Sunlight" style="width:50px;height:50px;"></td>
         <td width="60px"><a> Sunlight</a></td>
 		<td width="60px"><a><%= plants[i].sunlight[0] %> Lux</a></td>
 	</tr>
-	<tr align="center">
+	<tr class="notfirst" align="center">
         <td width="50px"><img src="/images/water.png" alt="Moisture" style="width:50px;height:50px;"></td>
         <td width="60px"><a> Moisture</a></td>
 		<td width="60px"><a><%= plants[i].moisture[0] %>%</a></td>
 	</tr>
-	<tr align="center">
+	<tr class="notfirst" align="center">
         <td width="50px"><img src="/images/poo.png" alt="Fertility" style="width:50px;height:50px;"></td>
         <td width="60px"><a> Fertility</a></td>
 		<td width="60px"><a><%= plants[i].fertility[0] %> uS/cm</a></td>
 	</tr>
-	<tr align="center">
+	<tr class="notfirst" align="center">
         <td width="50px"><img src="./images/temperature.png" alt="Temperature" style="width:50px;height:50px;"></td>
         <td width="60px"><a> Temperature</a></td>
 		<td width="60px"><a><%= plants[i].temperature[0] %> C</a></td>
 	</tr>
 	</tr>
-	<tr align="center">
+	<tr class="notfirst" align="center">
         <td width="50px"><img src="./images/battery.png" alt="Battery" style="width:50px;height:50px;"></td>
         <td width="60px"><a> Battery</a></td>
 		<td width="60px"><a><%= plants[i].battery[0] %>%</a></td>
 	</tr>
 
-	<tr align="center">
+	<tr class="notfirst" align="center">
 		<td width="60px"><a>Warnings: <%= plants[i].lastWarning %></a></td>
 	</tr>
 	</table>
 	<% } %>
 	</div>
+	<div class="footer">
+	<form>
 	<input id="refresh" type="button" onclick="window.location.reload()" value="Refresh">
-	<body>
+	</form>
+	</div>
 	</body>
 </html>
