--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -55,5 +55,10 @@
 	</table>
 	<input id="refresh" type="button" onclick="window.location.reload()" value="Refresh">
 	<body>
+	<script type="text/javascript">
+	setTimeout(function(){
+		location.reload();
+	}, 60*1000);
+	</script>
 	</body>
 </html>
