hover effect on rows

--- a/views/pages/indexBoot.ejs
+++ b/views/pages/indexBoot.ejs
@@ -7,35 +7,9 @@
 	<META HTTP-EQUIV="refresh" CONTENT="15">
     <link rel="stylesheet" href="https://bootswatch.com/4/cerulean/bootstrap.min.css">
     <style>
-        table {
-            <!-- border-collapse: collapse; -->
-            width: 30%;
-            float: left;
-            margin: 10px;
-
-        }
-        th, td {
-            padding: 8px;
-            text-align: center;
-            border-bottom: 1px solid #ddd;
-        }
-        table.roundedCorners { 
-                border: 1px solid Black;
-                border-radius: 13px; 
-                border-spacing: 0;
-            }
-        table.roundedCorners td, 
-        table.roundedCorners th { 
-            border-bottom: 1px solid Black;
-            padding: 10px; 
-            }
-        table.roundedCorners tr:last-child > td {
-                border-bottom: none;
-        }
-        tr.notfirst:hover {
-                background-color:#f5f5f5;
-                border: 1px solid Black;
-        }
+        .row-hov:hover {
+ 	 background-color: #f5f5f5;
+	}
     </style>
     <title>GardenJs</title>
 </head>
@@ -49,14 +23,14 @@
                             <img id="w-icon">
                             <ul class="list-group mt-3" id="w-details">
                               <li class="list-group-item" id="w-sunlight">
-                                <div class="row">
+                                <div class="row row-hov">
 				    <div class="col-sm align-self-center" width="50px"><img src="/images/sunlight.png" alt="Sunlight" style="width:50px;height:50px;"></div>
 				    <div class="col-sm align-self-center"> <a>Sunlight</a> </div>
                                     <div class="col-sm align-self-center" width="60px" id="w-sunlight-value"><a></a></div>
                                  </div>
                                </li>
                                <li class="list-group-item" id="w-moisture">
-			       	<div class="row">
+			       	<div class="row row-hov">
 				    <div class="col-sm align-self-center" width="50px"><img src="/images/water.png" alt="Moisture" style="width:50px;height:50px;"></div>
 				    <div class="col-sm align-self-center" style="text-align:center"><a>Moisture</a></div>
                                     <div class="col-sm align-self-center" width="60px" id="w-moisture-value"><a></a></div>
@@ -64,28 +38,28 @@
 
 			       </li> 
                                <li class="list-group-item" id="w-fertility">
-			       <div class="row">
+			       <div class="row row-hov">
 				    <div class="col-sm align-self-center" width="50px"><img src="/images/poo.png" alt="Fertility" style="width:50px;height:50px;"></div>
 				    <div class="col-sm align-self-center"><a>Fertility</a></div>
                                     <div class="col-sm align-self-center" width="60px" id="w-fertility-value"><a></a></div>
                                 </div>
 			       </li> 
                                <li class="list-group-item" id="w-temperature">
-			       <div class="row">
+			       <div class="row row-hov">
 				    <div class="col-sm align-self-center" width="50px"><img src="/images/temperature.png" alt="Temperature" style="width:50px;height:50px;"></div>
 				    <div class="col-sm align-self-center"><a>Temperature</a></div>
                                     <div class="col-sm align-self-center" width="60px" id="w-temperature-value"><a></a></div>
                                 </div>
 			       </li> 
                                <li class="list-group-item" id="w-battery">
-			       <div class="row">
+			       <div class="row row-hov">
 				    <div class="col-sm align-self-center" width="50px"><img src="/images/battery.png" alt="Battery" style="width:50px;height:50px;"></div>
 				    <div class="col-sm align-self-center"><a>Battery</a></div>
                                     <div class="col-sm align-self-center" width="60px" id="w-battery-value"><a></a></div>
                                 </div>
 			       </li> 
                                <li class="list-group-item" id="w-warnings">     
-			       	    <div class="row">
+			       	    <div class="row row-hov">
                                     	<div class="col-sm align-self-center" id="w-warning-value"><a></a></div>
 				    </div>
 			       </li> 
